[project]
name = "aipulse"
version = "0.2.0"
description = "AI Pulse - AI 资讯精选聚合平台"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "apscheduler>=3.10.4",
    "arxiv>=3.0.0",
    "beautifulsoup4>=4.12.0",
    "fastapi[standard]>=0.115.0",
    "feedparser>=6.0.0",
    "httpx>=0.28.1",
    "huggingface_hub>=1.2.0",
    "lxml>=5.0.0",
    "openai>=2.15.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.5.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100
